<resources>
    <string name="app_name">Patera</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_history">History</string>
    <string name="title_report">Report</string>
    <string name="title_profile">Profile</string>
    <string name="title_scan">Scan</string>

    <string name="halo_nama">Halo %s</string>
    <string name="dashboard_date">Senin, 27 Mei 2024</string>
    <string name="panduan_title">
        Panduan Penggunaan
    </string>

    <string name="panduan_desc">
        Untuk melakukan prediksi Anda dapat melakukan tahapan sebagai berikut:
    </string>

    <string name="panduan_bullet">
        • Tekan ikon kamera yang ada pada menu navigasi di bawah\n• Pilih sumber gambar yang akan kamu gunakan. Kamu dapat memilih mengambil foto secara langsung atau mengambil dari galeri kamu\n• Jika kamu sudah memilih foto yang akan digunakan selanjutnya kamu dapat mengklik tombol untuk proses gambar\n• Gambar kamu berhasil diproses dan mendapatkan hasil prediksi dari sistem serta kamu akan mendapat saran dari sistem\n• Seluruh gambar yang pernah kamu proses akan tersimpan di dalam riwayat
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Selamat Datang"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_onboard1">Langkah Cerdas untuk Deteksi Dini Penyakit</string>
    <string name="desc_onboard1">Temukan pengalaman baru bersama kami, nikmati sensasi terbaik dalam upaya melakukan pemeliharaan tanaman kamu</string>
    <string name="next">Berikutnya</string>
    <string name="title_onboard2">Ciptakan Masa Depan Berkelanjutan</string>
    <string name="desc_onboard2">Dilengkapi dengan fitur kecerdasan buatan untuk membantu kamu menganalisis jenis penyakit dan metode penanganannya.</string>
    <string name="start">Ayo Mulai!</string>
    <string name="skip">Lewati</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Lupa Password?</string>
    <string name="dont_have_account">Belum memiliki akun?</string>
    <string name="register_now">Daftar</string>
    <string name="login">Masuk</string>
    <string name="info_login">Masuk untuk menjelajah lebih jauh</string>
    <string name="or">atau</string>
    <string name="name">Nama</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="register">Buat Akun</string>
    <string name="register_google">Daftar menggunakan Google</string>
    <string name="already_have_an_account">Sudah memiliki akun?</string>
    <string name="login_with_google">Masuk menggunakan Google</string>
    <string name="Hello">Halo</string>
    <string name="info_register">Buat akun untuk menjelajah lebih lanjut</string>
    <string name="horeee">Horeee!</string>
    <string name="info_success_register">Akun kamu berhasil dibuat</string>
    <string name="info_success_register2">Sekarang kamu bisa menjelajah lebih jauh</string>
    <string name="login_now">Masuk Sekarang</string>
    <string name="hint_name">Masukkan nama lengkap</string>
    <string name="hint_email">Masukkan Email</string>
    <string name="hint_password">Masukkan Password</string>
    <string name="hint_confirm_password">Masukkan kembali Password</string>
    <string name="image_classifier_failed">"    Image classifier failed to initialize. See error logs for details"</string>

    <string name="profile_image">Profile Image</string>
    <string name="edit_profile_icon">Edit Profile Icon</string>
    <string name="arrow_icon">Arrow Icon</string>
    <string name="about_us_icon">About Us Icon</string>
    <string name="logout_icon">Logout Icon</string>
    <string name="back_button">Back Button</string>
    <string name="dummy_username">David Alexander</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="dummy_email">alex471@gmail.com</string>
    <string name="simpan">Simpan</string>

    <string name="title_report_problem">Laporkan Masalah</string>
    <string name="subtitle_report_problem">Kamu punya masalah? Yuk buat laporan</string>
    <string name="description_report_problem">Laporan yang kamu berikan berguna untuk meningkatkan kualitas produk kami</string>
    <string name="report_button_text">Laporkan Masalah</string>
    <string name="illustration">Illustration of reporting a problem</string>
    <string name="img_dashboard_banner">Dashboard Banner</string>

    <string name="select_image">Pilih Foto</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="delete_image">delete image</string>
    <string name="edit_image">edit image</string>
    <string name="analyze_image">Proses Gambar</string>

    <string name="articles">Articles</string>
    <string name="titles">The Best Title You Will Read All Day (Probably)</string>
    <string name="analyze">Analyze</string>
    <string name="result">Tanaman kamu mengalami ... </string>

    <string name="History">Riwayat</string>
    <string name="placeholder_history">Belum ada riwayat!</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="confirm">Konfirmasi</string>
    <string name="logout_confirmation">Apakah Anda yakin ingin keluar dari akun?</string>
    <string name="something_went_wrong">Terjadi Kesalahan</string>
    <string name="account_created_successfully">Account created successfully</string>
    <string name="update_profile_confirmation">Apakah anda yakin ingin mengupdate profile?</string>

    <string name="dummy_prevention">Anda sebaiknya menghindari menyimpan biji dari tanaman yang terinfeksi atau dari tanaman lain yang tumbuh di sekitarnya. Anda mungkin dapat membunuh patogen yang ada di permukaan biji, bahkan pada biji yang Anda beli, dengan merendam biji dalam larutan pemutih untuk melakukan sterilisasi. r\nr\nCaranya adalah meletakkan sekitar satu sendok makan biji dalam sebuah wadah, seperti toples kaca, dan tambahkan satu cangkir air panas tapi tidak mendidih, serta satu sendok makan pemutih klorin. Biarkan biji direndam selama sekitar 15 menit, lalu bilas dengan air dingin hingga aroma pemutih hilang.r\nr\nPerlu diingat bahwa perlakuan ini hanya akan membunuh patogen yang ada di permukaan luar biji, dan bakteri berpotensi bertahan di bawah lapisan biji. Setelah biji telah dicuci bersih, sebarkan dan biarkan mengering semalaman.r\nr\nKetika proses pertumbuhan, disarankan untuk menjaga kondisi kebun lebih sedikit kering agar perkembangan bakteri tidak cepat, sehingga penyebaran dapat dihindari.</string>
    <string name="dummy_cause">Penyebab utama penyakit ini bisa jadi jenis bakteri dari genera Xanthomonas dan Pseudomonas. Di Indonesia, istilah yang sering digunakan adalah kebusukan pada tanaman (black rot). Penyebaran dapat terjadi melalui penyiraman, karena bakteri dapat menyebar melalui percikan air.</string>
    <string name="Cause">Penyebab</string>
    <string name="dummy_healing">Jika gejala bakteri seperti ini ditemukan pada tanaman selada yang masih muda, anda dapat menyiramkan tanaman tersebut dengan Bakterisida</string>
    <string name="dummy_cost">Biaya untuk membeli Bakterisida di toko online rata-rata sebesar 20 ribu sampai 40 ribu.</string>
    <string name="healing">Penyembuhan</string>
    <string name="prevention">Pencegahan</string>
    <string name="cost">Biaya yang dikeluarkan</string>
    <string name="Result">Hasil Prediksi</string>
    <string name="heading_result">Hasil Prediksi</string>

    <string name="web_client_id">531693631238-git8b4k9gnfb450bcla5l727p7nie1gl.apps.googleusercontent.com</string>
    <string name="report_description_hint">Jelaskan masalah kamu</string>
    <string name="report_description_title">Tulis masalah kamu</string>
    <string name="unggah_foto">Unggah foto</string>
    <string name="kirim_laporan">Kirim Laporan</string>
    <string name="unggah_foto_opsional">Unggah foto (opsional)</string>
    <string name="empty" />

    <string name="select_category_prompt">Pilih kategori</string>
    <string name="pilih_kategori_masalah">Pilih kategori masalah</string>
    <string name="laporan_kamu_berhasil_terkirim">Laporan kamu berhasil terkirim</string>
    <string name="kembali_ke_beranda">Kembali ke Beranda</string>
    <string-array name="report_categories">
        <item>Akurasi prediksi</item>
        <item>Rekomendasi tidak muncul</item>
        <item>Fitur tidak berfungsi</item>
        <item>Aplikasi lambat</item>
        <item>Aplikasi lambat</item>
        <item>Lainnya...</item>
    </string-array>

</resources>