<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_tab_home"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_tab_history"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_scan"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/ic_tab_report"
        android:title="@string/title_report"
        />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_tab_profile"
        android:title="@string/title_profile" />

</menu>