<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/ivPlant"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img_add_photo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/select_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPlant" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/regular_button"
        android:text="@string/camera"
        app:layout_constraintStart_toStartOf="@id/textView"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gallery"
        style="@style/regular_button"
        app:layout_constraintBottom_toBottomOf="@id/btnCamera"
        app:layout_constraintStart_toEndOf="@id/btnCamera"
        app:layout_constraintTop_toTopOf="@id/btnCamera" />

    <ImageButton
        android:id="@+id/btnEditImage"
        android:layout_width="91dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/edit_image"
        android:src="@drawable/btn_edit_photo"
        app:layout_constraintStart_toStartOf="@+id/btnCamera"
        app:layout_constraintTop_toBottomOf="@+id/btnCamera"
        android:visibility="invisible"
        />

    <ImageButton
        android:id="@+id/btnDeleteImage"
        android:layout_width="91dp"
        android:layout_height="52dp"
        android:layout_marginStart="12dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/delete_image"
        android:src="@drawable/btn_delete_photo"
        app:layout_constraintBottom_toBottomOf="@+id/btnEditImage"
        app:layout_constraintStart_toEndOf="@+id/btnEditImage"
        app:layout_constraintTop_toTopOf="@+id/btnEditImage"
        app:layout_constraintVertical_bias="0.0"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/btnScan"
        style="@style/main_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="92dp"
        android:text="@string/analyze_image"
        app:layout_constraintTop_toBottomOf="@+id/progressIndicator"
        tools:layout_editor_absoluteX="0dp"
        android:visibility="invisible"
        />

    <ProgressBar
        android:id="@+id/progressIndicator"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>